# sosecrets-core

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: testing.yml
.github/workflows/: testing.yml
sosecrets_core/: secrets.c  secrets.pyi  secrets.pyx
tests/: test_secrets.py
