[tool.poetry]
name = "sosecrets-core"
version = "0.1.0"
description = ""
authors = ["Jim Chng <jimchng@outlook.com>"]
readme = "README.md"
packages = [{include = "sosecrets_core"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=57.0.0", "Cython>=0.29.27"]
build-backend = "poetry.core.masonry.api"
