[tool.poetry]
name = "sosecrets-core"
version = "0.1.0"
description = ""
authors = ["Jim Chng <jimchng@outlook.com>"]
readme = "README.md"
packages = [{include = "sosecrets_core"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=57.0.0", "Cython>=0.29.27"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

"README.md" = [
    "Version: {version}",
]

"setup.py" = [
    'version="{version}"',
]